--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700;800&family=Sacramento&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700;800&family=Sacramento&family=Yellowtail&display=swap"
     rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
