--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
       <h1>Eight Journeys</h1>
       <h2>Marigold</h2>
       <div class="button-div">
-        <button class="buttons">Click here to get started!</button>
+        <button class="buttons" id="get-started">Click here to get started!</button>
       </div>
     </header>
 
     <div class="intro story-div hide">
-      <p>Welcome to Eight Journeys! You're about to guide a very cute, very feisty bunny thief through a series of
-        choices. Each choice has two options, both leading down a different path. This story has eight possible
-        endings, each one a different genre. Will Marigold end up in a romance, or the victim of a horror
+      <p>Welcome to Eight Journeys! You're about to guide a cute, feisty bunny thief through a series of
+        choices. Each choice has two options, both of which will lead you on a very different path. This story has eight
+        possible endings. Will Marigold end up in a romance, or the victim of a horror
         story? How about abducted by aliens? It's up to you, so choose wisely!</p>
       <div class="image-div">
-        <img src="img/sunset.JPG" alt="">
+        <img src="img/intro.JPG" alt="A rabbit in a flower garden in front of a city">
       </div>
       <div class="button-div">
-        <button class="buttons">Begin</button>
+        <button class="buttons" id="begin-story">Begin story</button>
       </div>
     </div>
 
@@ -72,7 +72,7 @@
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
       <div class="image-div">
-        <img src="img/sunset.JPG" alt="">
+        <img src="img/garden.JPG" alt="A rabbit in a garden at night">
       </div>
       <div class="button-div">
         <button class="buttons" id="1A">Choice 1</button>
@@ -100,7 +100,7 @@
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
       <div class="image-div">
-        <img src="img/sunset.JPG" alt="">
+        <img src="img/country.JPG" alt="A rabbit in the countryside at night">
       </div>
       <div class="button-div">
         <button class="buttons" id="2AA">Choice 1</button>
@@ -184,7 +184,7 @@
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
       <div class="image-div">
-        <img src="img/sunset.JPG" alt="">
+        <img src="img/church.JPG" alt="A rabbit looking at an abandoned church">
       </div>
       <div class="button-div">
         <button class="buttons" id="3BA">Choice 1</button>
@@ -267,10 +267,10 @@
         hendrerit nec diam ac, elementum vehicula mi. Donec convallis ullamcorper quam, in viverra tellus facilisis a.
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
-      <h3>Congratulations! You've led Marigold to a feel-good ending!</h3>
       <div class="image-div">
         <img src="img/sunset.JPG" alt="">
       </div>
+      <h3>Congratulations! You've led Marigold to a feel-good ending!</h3>
       <div class="button-div">
         <button class="buttons return">Click here to try a different journey!</button>
       </div>
@@ -295,10 +295,10 @@
         hendrerit nec diam ac, elementum vehicula mi. Donec convallis ullamcorper quam, in viverra tellus facilisis a.
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
-      <h3>Congratulations! You've led Marigold to a horror ending!</h3>
       <div class="image-div">
         <img src="img/sunset.JPG" alt="">
       </div>
+      <h3>Congratulations! You've led Marigold to a horror ending!</h3>
       <div class="button-div">
         <button class="buttons return">Click here to try a different journey!</button>
       </div>
@@ -323,10 +323,10 @@
         hendrerit nec diam ac, elementum vehicula mi. Donec convallis ullamcorper quam, in viverra tellus facilisis a.
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
-      <h3>Congratulations! You've led Marigold to a romantic ending!</h3>
       <div class="image-div">
-        <img src="img/sunset.JPG" alt="">
+        <img src="img/romance.JPG" alt="Two rabbits cuddling">
       </div>
+      <h3>Congratulations! You've led Marigold to a romantic ending!</h3>
       <div class="button-div">
         <button class="buttons return">Click here to try a different journey!</button>
       </div>
@@ -351,10 +351,10 @@
         hendrerit nec diam ac, elementum vehicula mi. Donec convallis ullamcorper quam, in viverra tellus facilisis a.
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
-      <h3>Congratulations! You've led Marigold to a fantasy ending!</h3>
       <div class="image-div">
         <img src="img/sunset.JPG" alt="">
       </div>
+      <h3>Congratulations! You've led Marigold to a fantasy ending!</h3>
       <div class="button-div">
         <button class="buttons return">Click here to try a different journey!</button>
       </div>
@@ -379,10 +379,10 @@
         hendrerit nec diam ac, elementum vehicula mi. Donec convallis ullamcorper quam, in viverra tellus facilisis a.
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
-      <h3>Congratulations! You've led Marigold to a mystery ending!</h3>
       <div class="image-div">
         <img src="img/sunset.JPG" alt="">
       </div>
+      <h3>Congratulations! You've led Marigold to a mystery ending!</h3>
       <div class="button-div">
         <button class="buttons return">Click here to try a different journey!</button>
       </div>
@@ -407,10 +407,10 @@
         hendrerit nec diam ac, elementum vehicula mi. Donec convallis ullamcorper quam, in viverra tellus facilisis a.
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
-      <h3>Congratulations! You've led Marigold to a thriller ending!</h3>
       <div class="image-div">
         <img src="img/sunset.JPG" alt="">
       </div>
+      <h3>Congratulations! You've led Marigold to a thriller ending!</h3>
       <div class="button-div">
         <button class="buttons return">Click here to try a different journey!</button>
       </div>
@@ -435,10 +435,10 @@
         hendrerit nec diam ac, elementum vehicula mi. Donec convallis ullamcorper quam, in viverra tellus facilisis a.
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
-      <h3>Congratulations! You've led Marigold to a sci-fi ending!</h3>
       <div class="image-div">
         <img src="img/sunset.JPG" alt="">
       </div>
+      <h3>Congratulations! You've led Marigold to a sci-fi ending!</h3>
       <div class="button-div">
         <button class="buttons return">Click here to try a different journey!</button>
       </div>
@@ -463,10 +463,10 @@
         hendrerit nec diam ac, elementum vehicula mi. Donec convallis ullamcorper quam, in viverra tellus facilisis a.
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
-      <h3>Congratulations! You've led Marigold to a YA ending!</h3>
       <div class="image-div">
         <img src="img/sunset.JPG" alt="">
       </div>
+      <h3>Congratulations! You've led Marigold to a YA ending!</h3>
       <div class="button-div">
         <button class="buttons return">Click here to try a different journey!</button>
       </div>
