Updates to HTML

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
 
     <div class="intro story-div hide">
-      <p>Welcome to Eight Journeys! You're about to guide a cute, feisty bunny thief through a series of
+      <p>Welcome to Eight Journeys: Marigold! You're about to guide a cute, feisty bunny thief through a series of
         choices. Each choice has two options, both of which will lead you on a very different path. This story has eight
         possible endings. Will Marigold end up in a romance, or the victim of a horror
         story? How about abducted by aliens? It's up to you, so choose wisely!</p>
@@ -75,8 +75,8 @@
         <img src="img/garden.JPG" alt="A rabbit in a garden at night">
       </div>
       <div class="button-div">
-        <button class="buttons" id="1A">Choice 1</button>
-        <button class="buttons" id="1B">Choice 2</button>
+        <button class="buttons" id="1A">Life is a highway. Run for the countryside</button>
+        <button class="buttons" id="1B">Start spreading the news, I'm leaving today. Run for the city</button>
       </div>
     </div>
 
@@ -103,8 +103,8 @@
         <img src="img/country.JPG" alt="A rabbit in the countryside at night">
       </div>
       <div class="button-div">
-        <button class="buttons" id="2AA">Choice 1</button>
-        <button class="buttons" id="2AB">Choice 2</button>
+        <button class="buttons" id="2AA">Avoid the church. You'd probably be cursed if you went in</button>
+        <button class="buttons" id="2AB">Praise! Take shelter in the church</button>
       </div>
     </div>
 
@@ -159,8 +159,8 @@
         <img src="img/sunset.JPG" alt="">
       </div>
       <div class="button-div">
-        <button class="buttons" id="3AA">Choice 1</button>
-        <button class="buttons" id="3AB">Choice 2</button>
+        <button class="buttons" id="3AA">Be a good samaritan. Help the fox</button>
+        <button class="buttons" id="3AB">What are you crazy? Don't help the fox!</button>
       </div>
     </div>
 
@@ -272,7 +272,7 @@
       </div>
       <h3>Congratulations! You've led Marigold to a feel-good ending!</h3>
       <div class="button-div">
-        <button class="buttons return">Click here to try a different journey!</button>
+        <button class="buttons return1">Click here to try a different journey!</button>
       </div>
     </div>
 
@@ -300,7 +300,7 @@
       </div>
       <h3>Congratulations! You've led Marigold to a horror ending!</h3>
       <div class="button-div">
-        <button class="buttons return">Click here to try a different journey!</button>
+        <button class="buttons return2">Click here to try a different journey!</button>
       </div>
     </div>
 
@@ -328,7 +328,7 @@
       </div>
       <h3>Congratulations! You've led Marigold to a romantic ending!</h3>
       <div class="button-div">
-        <button class="buttons return">Click here to try a different journey!</button>
+        <button class="buttons return3">Click here to try a different journey!</button>
       </div>
     </div>
 
@@ -356,7 +356,7 @@
       </div>
       <h3>Congratulations! You've led Marigold to a fantasy ending!</h3>
       <div class="button-div">
-        <button class="buttons return">Click here to try a different journey!</button>
+        <button class="buttons return4">Click here to try a different journey!</button>
       </div>
     </div>
 
@@ -384,7 +384,7 @@
       </div>
       <h3>Congratulations! You've led Marigold to a mystery ending!</h3>
       <div class="button-div">
-        <button class="buttons return">Click here to try a different journey!</button>
+        <button class="buttons return5">Click here to try a different journey!</button>
       </div>
     </div>
 
@@ -412,7 +412,7 @@
       </div>
       <h3>Congratulations! You've led Marigold to a thriller ending!</h3>
       <div class="button-div">
-        <button class="buttons return">Click here to try a different journey!</button>
+        <button class="buttons return6">Click here to try a different journey!</button>
       </div>
     </div>
 
@@ -440,7 +440,7 @@
       </div>
       <h3>Congratulations! You've led Marigold to a sci-fi ending!</h3>
       <div class="button-div">
-        <button class="buttons return">Click here to try a different journey!</button>
+        <button class="buttons return7">Click here to try a different journey!</button>
       </div>
     </div>
 
@@ -468,7 +468,7 @@
       </div>
       <h3>Congratulations! You've led Marigold to a YA ending!</h3>
       <div class="button-div">
-        <button class="buttons return">Click here to try a different journey!</button>
+        <button class="buttons return8">Click here to try a different journey!</button>
       </div>
     </div>
   </div>
