Updated JS variables and one function

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <img src="img/garden.JPG" alt="A rabbit in a garden at night">
       </div>
       <div class="button-div">
-        <button class="buttons" id="1A">Life is a highway. Run for the countryside.</button>
+        <button class="buttons" id="one-A">Life is a highway. Run for the countryside.</button>
         <button class="buttons" id="1B">Start spreading the news, I'm leaving today. Run for the city.</button>
       </div>
     </div>
