--- a/index.html
+++ b/index.html
@@ -21,12 +21,25 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700;800&family=Sacramento&family=Yellowtail&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Creepster&family=Faster+One&family=Megrim&family=Open+Sans:wght@300;400;500;600;700;800&family=Qwigley&family=Redressed&family=Rubik+Wet+Paint&family=Sacramento&family=Slackey&family=Yellowtail&display=swap" rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
 </head>
+
+<!--font-family: 'Annie Use Your Telescope', cursive;
+font-family: 'Creepster', cursive;
+font-family: 'Faster One', cursive;
+font-family: 'Megrim', cursive;
+font-family: 'Open Sans', sans-serif;
+font-family: 'Qwigley', cursive;
+font-family: 'Redressed', cursive;
+font-family: 'Rubik Wet Paint', cursive;
+font-family: 'Sacramento', cursive;
+font-family: 'Slackey', cursive;
+font-family: 'Yellowtail', cursive;-->
+
+
+
 
 <body>
   <div class="content-wrapper">
@@ -471,7 +484,7 @@
         hendrerit nec diam ac, elementum vehicula mi. Donec convallis ullamcorper quam, in viverra tellus facilisis a.
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
-      <h3>Congratulations! You've led Marigold to a YA ending!</h3>
+      <h3>Congratulations! You've led Marigold to a dystopian ending!</h3>
       <div class="button-div">
         <button class="buttons return8">Click here to try a different journey!</button>
       </div>
