--- a/index.html
+++ b/index.html
@@ -26,21 +26,6 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<!--font-family: 'Annie Use Your Telescope', cursive;
-font-family: 'Creepster', cursive;
-font-family: 'Faster One', cursive;
-font-family: 'Megrim', cursive;
-font-family: 'Open Sans', sans-serif;
-font-family: 'Qwigley', cursive;
-font-family: 'Redressed', cursive;
-font-family: 'Rubik Wet Paint', cursive;
-font-family: 'Sacramento', cursive;
-font-family: 'Slackey', cursive;
-font-family: 'Yellowtail', cursive;-->
-
-
-
-
 <body>
   <div class="content-wrapper">
 
@@ -288,7 +273,7 @@ font-family: 'Yellowtail', cursive;-->
         hendrerit nec diam ac, elementum vehicula mi. Donec convallis ullamcorper quam, in viverra tellus facilisis a.
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
-      <h3>Congratulations! You've led Marigold to a feel-good ending!</h3>
+      <h3>Congratulations! You've led Marigold to a <span style ="font-family: 'Annie Use Your Telescope', cursive;">feel-good</span> ending!</h3>
       <div class="button-div">
         <button class="buttons return1">Was that ending too syrupy for you? Click here to try a different journey!</button>
       </div>
@@ -316,9 +301,9 @@ font-family: 'Yellowtail', cursive;-->
         hendrerit nec diam ac, elementum vehicula mi. Donec convallis ullamcorper quam, in viverra tellus facilisis a.
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
-      <h3>Congratulations! You've led Marigold to a horror ending!</h3>
+      <h3>Congratulations! You've led Marigold to a <span style ="font-family: 'Creepster', cursive;">horror</span> ending!</h3>
       <div class="button-div">
-        <button class="buttons return2">Yikes. Click here to try a different journey!</button>
+        <button class="buttons return2">Yikes. Let's assume Marigold escaped and lived a long and happy life. Click here to try a different journey!</button>
       </div>
     </div>
 
@@ -344,7 +329,7 @@ font-family: 'Yellowtail', cursive;-->
         hendrerit nec diam ac, elementum vehicula mi. Donec convallis ullamcorper quam, in viverra tellus facilisis a.
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
-      <h3>Congratulations! You've led Marigold to a romantic ending!</h3>
+      <h3>Congratulations! You've led Marigold to a <span style ="font-family: 'Qwigley', cursive;">romance</span> ending!</h3>
       <div class="button-div">
         <button class="buttons return3">Aw. So sweet. Click here to try a different journey!</button>
       </div>
@@ -372,7 +357,7 @@ font-family: 'Yellowtail', cursive;-->
         hendrerit nec diam ac, elementum vehicula mi. Donec convallis ullamcorper quam, in viverra tellus facilisis a.
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
-      <h3>Congratulations! You've led Marigold to a fantasy ending!</h3>
+      <h3>Congratulations! You've led Marigold to a <span style ="font-family: 'Redressed', cursive;">fantasy</span> ending!</h3>
       <div class="button-div">
         <button class="buttons return4">Don't have enough 20-sided dice to enjoy fantasy? Click here to try a different journey!</button>
       </div>
@@ -400,7 +385,7 @@ font-family: 'Yellowtail', cursive;-->
         hendrerit nec diam ac, elementum vehicula mi. Donec convallis ullamcorper quam, in viverra tellus facilisis a.
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
-      <h3>Congratulations! You've led Marigold to a true crime ending!</h3>
+      <h3>Congratulations! You've led Marigold to a <span style ="font-family: 'Rubik Wet Paint', cursive;">true crime</span> ending!</h3>
       <div class="button-div">
         <button class="buttons return5">Click here to try a different journey!</button>
       </div>
@@ -428,7 +413,7 @@ font-family: 'Yellowtail', cursive;-->
         hendrerit nec diam ac, elementum vehicula mi. Donec convallis ullamcorper quam, in viverra tellus facilisis a.
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
-      <h3>Congratulations! You've led Marigold to a thriller ending!</h3>
+      <h3>Congratulations! You've led Marigold to a <span style ="font-family: 'Faster One', cursive;">thriller</span> ending!</h3>
       <div class="button-div">
         <button class="buttons return6">Click here to try a different journey!</button>
       </div>
@@ -456,7 +441,7 @@ font-family: 'Yellowtail', cursive;-->
         hendrerit nec diam ac, elementum vehicula mi. Donec convallis ullamcorper quam, in viverra tellus facilisis a.
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
-      <h3>Congratulations! You've led Marigold to a sci-fi ending!</h3>
+      <h3>Congratulations! You've led Marigold to a <span style ="font-family: 'Megrim', cursive;">sci-fi</span> ending!</h3>
       <div class="button-div">
         <button class="buttons return7">Click here to try a different journey!</button>
       </div>
@@ -484,7 +469,7 @@ font-family: 'Yellowtail', cursive;-->
         hendrerit nec diam ac, elementum vehicula mi. Donec convallis ullamcorper quam, in viverra tellus facilisis a.
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.</p>
-      <h3>Congratulations! You've led Marigold to a dystopian ending!</h3>
+      <h3>Congratulations! You've led Marigold to a <span style ="font-family: 'Slackey', cursive;">dystopian</span> ending!</h3>
       <div class="button-div">
         <button class="buttons return8">Click here to try a different journey!</button>
       </div>
