Updated images, CSS, and JS

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <div class="second-choice2 hide story-div">
       <div class="image-div">
-        <img src="img/sunset.JPG" alt="">
+        <img src="img/street.JPG" alt="">
       </div>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam vestibulum, arcu neque
         commodo eros, non egestas nisi lectus nec libero. Pellentesque tempus euismod ante ut pellentesque. Donec
@@ -384,7 +384,7 @@
 
     <div class="final5 hide story-div">
       <div class="image-div">
-        <img src="img/sunset.JPG" alt="">
+        <img src="img/birds.JPG" alt="">
       </div>
       <p class="para1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
         vestibulum, arcu neque
@@ -446,7 +446,7 @@
 
     <div class="final7 hide story-div">
       <div class="image-div">
-        <img src="img/sunset.JPG" alt="">
+        <img src="img/alien.JPG" alt="">
       </div>
       <p class="para1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
         vestibulum, arcu neque
@@ -477,7 +477,7 @@
 
     <div class="final8 hide story-div">
       <div class="image-div">
-        <img src="img/sunset.JPG" alt="">
+        <img src="img/fire.JPG" alt="">
       </div>
       <p class="para1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
         vestibulum, arcu neque
