--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <div class="image-div">
         <img src="img/banana-fox.JPG" alt="A fox at night with a banana">
       </div>
-      <p class="para1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
+      <p id="para1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
         vestibulum, arcu neque
         commodo eros, non egestas nisi lectus nec libero. Pellentesque tempus euismod ante ut pellentesque. Donec
         tristique metus felis, vitae lacinia odio lacinia at. Mauris id quam eu neque mattis dapibus. Donec sem turpis,
@@ -279,7 +279,7 @@
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.
       </p>
-      <h3>Congratulations! You've led Marigold to a <span
+      <h3 id="announce1">Congratulations! You've led Marigold to a <span
           style="font-family: 'Annie Use Your Telescope', cursive;">feel-good</span> ending!</h3>
       <div class="button-div">
         <button class="buttons return1">Was that ending too syrupy for you? Click here to try a different
@@ -291,7 +291,7 @@
       <div class="image-div">
         <img src="img/basement.JPG" alt="A rabbit trapped in a basement">
       </div>
-      <p class="para1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
+      <p id="para2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
         vestibulum, arcu neque
         commodo eros, non egestas nisi lectus nec libero. Pellentesque tempus euismod ante ut pellentesque. Donec
         tristique metus felis, vitae lacinia odio lacinia at. Mauris id quam eu neque mattis dapibus. Donec sem turpis,
@@ -311,7 +311,7 @@
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.
       </p>
-      <h3>Congratulations! You've led Marigold to a <span style="font-family: 'Creepster', cursive;">horror</span>
+      <h3 id="announce2">Congratulations! You've led Marigold to a <span style="font-family: 'Creepster', cursive;">horror</span>
         ending!</h3>
       <div class="button-div">
         <button class="buttons return2">Yikes. Let's assume Marigold escaped and lived a long and happy life. Click here
@@ -323,7 +323,7 @@
       <div class="image-div">
         <img src="img/romance.JPG" alt="Two rabbits cuddling">
       </div>
-      <p class="para1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
+      <p id="para3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
         vestibulum, arcu neque
         commodo eros, non egestas nisi lectus nec libero. Pellentesque tempus euismod ante ut pellentesque. Donec
         tristique metus felis, vitae lacinia odio lacinia at. Mauris id quam eu neque mattis dapibus. Donec sem turpis,
@@ -343,7 +343,7 @@
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.
       </p>
-      <h3>Congratulations! You've led Marigold to a <span style="font-family: 'Qwigley', cursive;">romance</span>
+      <h3 id="announce3">Congratulations! You've led Marigold to a <span style="font-family: 'Qwigley', cursive;">romance</span>
         ending!</h3>
       <div class="button-div">
         <button class="buttons return3">Aw. So sweet. Click here to try a different journey!</button>
@@ -354,7 +354,7 @@
       <div class="image-div">
         <img src="img/fantasy-bunny.jpg" alt="A rabbit with a wizard hat">
       </div>
-      <p class="para4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
+      <p id="para4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
         vestibulum, arcu neque
         commodo eros, non egestas nisi lectus nec libero. Pellentesque tempus euismod ante ut pellentesque. Donec
         tristique metus felis, vitae lacinia odio lacinia at. Mauris id quam eu neque mattis dapibus. Donec sem turpis,
@@ -374,7 +374,7 @@
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.
       </p>
-      <h3>Congratulations! You've led Marigold to a <span style="font-family: 'Redressed', cursive;">fantasy</span>
+      <h3 id="announce4">Congratulations! You've led Marigold to a <span style="font-family: 'Redressed', cursive;">fantasy</span>
         ending!</h3>
       <div class="button-div">
         <button class="buttons return4">Don't have enough 20-sided dice to enjoy fantasy? Click here to try a different
@@ -386,7 +386,7 @@
       <div class="image-div">
         <img src="img/birds.JPG" alt="">
       </div>
-      <p class="para1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
+      <p id="para5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
         vestibulum, arcu neque
         commodo eros, non egestas nisi lectus nec libero. Pellentesque tempus euismod ante ut pellentesque. Donec
         tristique metus felis, vitae lacinia odio lacinia at. Mauris id quam eu neque mattis dapibus. Donec sem turpis,
@@ -406,7 +406,7 @@
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.
       </p>
-      <h3>Congratulations! You've led Marigold to a <span style="font-family: 'Rubik Wet Paint', cursive;">true
+      <h3 id="announce5">Congratulations! You've led Marigold to a <span style="font-family: 'Rubik Wet Paint', cursive;">true
           crime</span> ending!</h3>
       <div class="button-div">
         <button class="buttons return5">Click here to try a different journey!</button>
@@ -417,7 +417,7 @@
       <div class="image-div">
         <img src="img/sunset.JPG" alt="">
       </div>
-      <p class="para1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
+      <p id="para6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
         vestibulum, arcu neque
         commodo eros, non egestas nisi lectus nec libero. Pellentesque tempus euismod ante ut pellentesque. Donec
         tristique metus felis, vitae lacinia odio lacinia at. Mauris id quam eu neque mattis dapibus. Donec sem turpis,
@@ -437,7 +437,7 @@
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.
       </p>
-      <h3>Congratulations! You've led Marigold to a <span style="font-family: 'Faster One', cursive;">thriller</span>
+      <h3 id="announce6">Congratulations! You've led Marigold to a <span style="font-family: 'Faster One', cursive;">thriller</span>
         ending!</h3>
       <div class="button-div">
         <button class="buttons return6">Click here to try a different journey!</button>
@@ -448,7 +448,7 @@
       <div class="image-div">
         <img src="img/alien.JPG" alt="">
       </div>
-      <p class="para1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
+      <p id="para7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
         vestibulum, arcu neque
         commodo eros, non egestas nisi lectus nec libero. Pellentesque tempus euismod ante ut pellentesque. Donec
         tristique metus felis, vitae lacinia odio lacinia at. Mauris id quam eu neque mattis dapibus. Donec sem turpis,
@@ -468,7 +468,7 @@
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.
       </p>
-      <h3>Congratulations! You've led Marigold to a <span style="font-family: 'Megrim', cursive;">sci-fi</span> ending!
+      <h3 id="announce7">Congratulations! You've led Marigold to a <span style="font-family: 'Megrim', cursive;">sci-fi</span> ending!
       </h3>
       <div class="button-div">
         <button class="buttons return7">Click here to try a different journey!</button>
@@ -479,7 +479,7 @@
       <div class="image-div">
         <img src="img/fire.JPG" alt="">
       </div>
-      <p class="para1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
+      <p id="para8">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
         vestibulum, arcu neque
         commodo eros, non egestas nisi lectus nec libero. Pellentesque tempus euismod ante ut pellentesque. Donec
         tristique metus felis, vitae lacinia odio lacinia at. Mauris id quam eu neque mattis dapibus. Donec sem turpis,
@@ -499,7 +499,7 @@
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.
       </p>
-      <h3>Congratulations! You've led Marigold to a <span style="font-family: 'Slackey', cursive;">dystopian</span>
+      <h3 id="announce8">Congratulations! You've led Marigold to a <span style="font-family: 'Slackey', cursive;">dystopian</span>
         ending!</h3>
       <div class="button-div">
         <button class="buttons return8">Click here to try a different journey!</button>
