Updated function and appearance of final divs, added last image

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <div class="second-choice2 hide story-div">
       <div class="image-div">
-        <img src="img/street.JPG" alt="">
+        <img src="img/street.JPG" alt="A rabbit on a city street at night">
       </div>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam vestibulum, arcu neque
         commodo eros, non egestas nisi lectus nec libero. Pellentesque tempus euismod ante ut pellentesque. Donec
@@ -384,7 +384,7 @@
 
     <div class="final5 hide story-div">
       <div class="image-div">
-        <img src="img/birds.JPG" alt="">
+        <img src="img/birds.JPG" alt="Two parrots in an alley">
       </div>
       <p id="para5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
         vestibulum, arcu neque
@@ -415,7 +415,7 @@
 
     <div class="final6 hide story-div">
       <div class="image-div">
-        <img src="img/sunset.JPG" alt="">
+        <img src="img/hiding.JPG" alt="A rabbit hiding in the grass">
       </div>
       <p id="para6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
         vestibulum, arcu neque
@@ -446,7 +446,7 @@
 
     <div class="final7 hide story-div">
       <div class="image-div">
-        <img src="img/alien.JPG" alt="">
+        <img src="img/alien.JPG" alt="A rabbit with an alien ship above it">
       </div>
       <p id="para7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
         vestibulum, arcu neque
@@ -477,7 +477,7 @@
 
     <div class="final8 hide story-div">
       <div class="image-div">
-        <img src="img/fire.JPG" alt="">
+        <img src="img/fire.JPG" alt="A rabbit watching fire rain from the sky">
       </div>
       <p id="para8">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum, odio at aliquam
         vestibulum, arcu neque
