Finished styles and functionality

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.
       </p>
-      <h3 id="announce2">Congratulations! You've led Marigold to a <span style="font-family: 'Creepster', cursive;">horror</span>
+      <h3 id="announce2">Congratulations! You've led Marigold to a <span style="font-family: 'Rubik Wet Paint', cursive;">horror</span>
         ending!</h3>
       <div class="button-div">
         <button class="buttons return2">Yikes. Let's assume Marigold escaped and lived a long and happy life. Click here
@@ -343,7 +343,7 @@
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.
       </p>
-      <h3 id="announce3">Congratulations! You've led Marigold to a <span style="font-family: 'Qwigley', cursive;">romance</span>
+      <h3 id="announce3">Congratulations! You've led Marigold to a <span style="font-family: 'Qwigley', cursive; font-size: 28px;">romance</span>
         ending!</h3>
       <div class="button-div">
         <button class="buttons return3">Aw. So sweet. Click here to try a different journey!</button>
@@ -374,7 +374,7 @@
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.
       </p>
-      <h3 id="announce4">Congratulations! You've led Marigold to a <span style="font-family: 'Redressed', cursive;">fantasy</span>
+      <h3 id="announce4">Congratulations! You've led Marigold to a <span style="font-family: 'Redressed', cursive; font-size: 19px;">fantasy</span>
         ending!</h3>
       <div class="button-div">
         <button class="buttons return4">Don't have enough 20-sided dice to enjoy fantasy? Click here to try a different
@@ -406,7 +406,7 @@
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.
       </p>
-      <h3 id="announce5">Congratulations! You've led Marigold to a <span style="font-family: 'Rubik Wet Paint', cursive;">true
+      <h3 id="announce5">Congratulations! You've led Marigold to a <span style="font-family: 'Creepster', cursive; font-size: 18px;">true
           crime</span> ending!</h3>
       <div class="button-div">
         <button class="buttons return5">Click here to try a different journey!</button>
@@ -437,7 +437,7 @@
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.
       </p>
-      <h3 id="announce6">Congratulations! You've led Marigold to a <span style="font-family: 'Faster One', cursive;">thriller</span>
+      <h3 id="announce6">Congratulations! You've led Marigold to a <span style="font-family: 'Faster One', cursive; font-size: 20px;">thriller</span>
         ending!</h3>
       <div class="button-div">
         <button class="buttons return6">Click here to try a different journey!</button>
@@ -499,7 +499,7 @@
         Etiam a lobortis dolor. Proin mollis euismod massa, a pellentesque dui mattis sit amet. Lorem ipsum dolor sit
         amet, consectetur adipiscing elit. Nunc eleifend aliquam scelerisque. Aliquam efficitur suscipit euismod.
       </p>
-      <h3 id="announce8">Congratulations! You've led Marigold to a <span style="font-family: 'Slackey', cursive;">dystopian</span>
+      <h3 id="announce8">Congratulations! You've led Marigold to a <span style="font-family: 'Slackey', cursive; font-size: 13px;">dystopian</span>
         ending!</h3>
       <div class="button-div">
         <button class="buttons return8">Click here to try a different journey!</button>
