--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
           style="font-family: 'Creepster', cursive; font-size: 18px;">true
           crime</span> ending!</h3>
       <div class="button-div">
-        <button class="buttons return5">Click here to try a different journey!</button>
+        <button class="buttons return5">Now Marigold will have to start a podcast. Click here to try a different journey!</button>
       </div>
     </div>
 
@@ -420,7 +420,7 @@
           style="font-family: 'Faster One', cursive; font-size: 20px;">thriller</span>
         ending!</h3>
       <div class="button-div">
-        <button class="buttons return6">Click here to try a different journey!</button>
+        <button class="buttons return6">Cue the James Newton Howard soundtrack. Click here to try a different journey!</button>
       </div>
     </div>
 
@@ -451,7 +451,7 @@
           style="font-family: 'Megrim', cursive;">sci-fi</span> ending!
       </h3>
       <div class="button-div">
-        <button class="buttons return7">Click here to try a different journey!</button>
+        <button class="buttons return7">Free food and rent seems like a great deal! Click here to try a different journey!</button>
       </div>
     </div>
 
@@ -473,7 +473,7 @@
           style="font-family: 'Slackey', cursive; font-size: 13px;">dystopian</span>
         ending!</h3>
       <div class="button-div">
-        <button class="buttons return8">Click here to try a different journey!</button>
+        <button class="buttons return8">Marigold volunteers as tribute. Click here to try a different journey!</button>
       </div>
     </div>
   </div>
