Last tiny changes for now

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         scent of blood lingers in the air, and Marigold&#39s heart begins to pound. He&#39s about to turn and flee when
         a quiet, weak voice calls out for help.
         <br><br>Marigold creeps forward and peers down into a ditch. At the bottom, a fox is lying on the ground.
-        Marigold almost flees again but realizes that the fox&#39s back leg is caught in a trap. It&#39s bleeding,
+        Marigold almost flees again, but then he realizes that the fox&#39s back leg is caught in a trap. It&#39s bleeding,
         though not heavily, and the fox&#39s coat is matted and muddy from his efforts to escape.
         <br><br>The fox pleads with Marigold for help. He claims to be a vegetarian and promises not to hurt Marigold
         while he pries off the trap. He promises a warm burrow stocked with food for as long as Marigold wants to stay.
@@ -389,14 +389,14 @@
         the parrots are too preoccupied with trying to shred him that they don&#39t see the human until they&#39re
         trapped in his net.
         <br><br>Marigold triumphantly returns to the alley. More rats have gathered, drawn by the disturbance. Though
-        they are grateful for his assistance, it&#39s still a solemn occasion. Marigold says goodbye to Emmett as they
+        they&#39re grateful for his assistance, it&#39s still a solemn occasion. Marigold says goodbye to Emmett as they
         head off to bury Rory, and then he turns for home.
       </p>
       <h3 id="announce5">Congratulations! You've led Marigold to a <span
           style="font-family: 'Creepster', cursive; font-size: 18px;">true
           crime</span> ending!</h3>
       <div class="button-div">
-        <button class="buttons return5">Now Marigold will have to start a podcast. Click here to try a different journey!</button>
+        <button class="buttons return5">Now Marigold can start his own podcast! Click here to try a different journey!</button>
       </div>
     </div>
 
